--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>CMSC508</groupId>
   <artifactId>mysql-java</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.19</version>
+		</dependency>
+	</dependencies>
 </project>
